# photominifier

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  install_dependencies.sh  vscode.code-workspace
include/: optimize_jpeg.hpp  photorepository.hpp  s3.hpp
kubernetes/: cron.yaml
src/: main.cpp  optimize_jpeg.cpp  photorepository.cpp  s3.cpp
